Devise実装・タスク管理画面実装

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -29,6 +29,28 @@ header .header-name {
   margin-right: 20px;
 }
 
+main {
+  text-align: center;
+}
+
+.flash-message {
+  border-radius: 5px;
+  padding: 16px 24px;
+  margin: 16px 0px;
+}
+ 
+.flash-message.notice {
+  background-color: #bcdfff;
+  color: #0067C0;
+  border: solid 1px #0067C0;
+}
+ 
+.flash-message.alert {
+  background-color: #ffd4d1;
+  color: #930403;
+  border: solid 1px #930403;
+}
+
 footer {
   width: 100%;
   background-color: #105175;
@@ -83,6 +105,7 @@ body {
 
  .user-form {
   text-align: center;
+  margin-top: 100px;
  }
 
  .field {
@@ -129,7 +152,7 @@ body {
 
 .task-container {
   list-style: none;
-  display: block;
+  display: flex;
 }
 
 .task {
