--- a/app/views/tasks/_footer.html.erb
+++ b/app/views/tasks/_footer.html.erb
@@ -2,8 +2,8 @@
   <nav>
     <div class="footer-item">
       <ul>
-        <li><%= link_to '利用規約', '#' %></li>
-        <li><%= link_to 'プライバシーポリシー', '#' %></li>
+        <li><%= link_to '利用規約', page_path('about') %></li>
+        <li><%= link_to 'プライバシーポリシー', page_path('privacy') %></li>
         <li>Copyright @ 2023</li>
       </ul>
     </div>
