--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,6 +1,6 @@
-<h1>New task</h1>
-<%= render "form", task: @task %>
-<br>
-<div>
-  <%= link_to "Back to tasks", tasks_path %>
+<div class="body-item">
+  <h2>タスク作成</h2>
+  <div class="card-body">
+    <%= render 'form' %>
+  </div>
 </div>
