--- a/app/views/tasks/_header.html.erb
+++ b/app/views/tasks/_header.html.erb
@@ -6,9 +6,14 @@
           <li class="maintheme"><%= link_to 'Pottode', root_path %></li>
           <li class="header-name"><%= current_user.name %>様</li>
           <li class="header-item"><%= link_to 'アカウント編集', edit_user_registration_path %></li>
-          <li class="header-item"><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, data: { confirm: "このユーザーを削除しますか？"}
-          %></li>
-        </ul>
+          <li class="header-item"><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, data: { confirm: "このユーザーを削除しますか？"} %></li>
+          <li class="header-search">
+          <%= form_with url: tasks_path, method: :get, local: true do |form| %>
+            <%= form.select("category_id", Category.pluck(:name, :id), { include_blank: true }) %>
+            <%= form.submit 'カテゴリ検索', name: nil %>
+          <% end %>
+          </li>
+          </ul>
       </div>
     </nav>
   </header>
