--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,12 +1,17 @@
 <div class="container">
   <div class="row">
     <% @tasks.each do |task| %>
-      <div class="col-md-3">
+      <div class="col-md-2">
         <div class="task-list">
         <p><b><%= link_to task.title, edit_task_path(task) %></b></p>
         <p><%= task.description %></p>
         <p>開始：<%= task.start_date.strftime("%m月%d日 %H:%M") %></p>
         <p>終了：<%= task.end_date.strftime("%m月%d日 %H:%M") %></p>
+        <p>カテゴリ：
+        <% task.categories.each do |category| %>
+          <%= category.name %>
+        <% end %>
+        </p>
         <div class="edit-delete">
           <%= button_to '編集', edit_task_path(task), method: :get, class: 'btn btn-primary' %>
           <%= link_to '#' do %>
