--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -11,6 +11,9 @@
         <div class="new-task">
           <%= link_to 'こちらからタスクを作りましょう！', new_task_path, class: 'btn btn-primary' %>
         </div>
+        <div class="new-task">
+        <%= link_to 'カテゴリ一覧はこちら', categories_path, class: 'btn btn-success' %>
+      </div>
       </div>
     </body>
   <% else %>
