--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -13,6 +13,7 @@
         </div>
         <div class="new-task">
         <%= link_to 'カテゴリ一覧はこちら', categories_path, class: 'btn btn-success' %>
+        <%= paginate @tasks %>
       </div>
       </div>
     </body>
