--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -25,6 +25,10 @@
             <%= f.label :category_ids, category.name %>
           <% end %>
         </div>
+        <div class="field">
+          <%= f.check_box :recurrence, { multiple: true } %>
+          <%= f.label :recurrence, "毎週繰り返す" %>
+        </div>
         <%= f.submit '登録', class: 'btn btn-primary'  %>
       <% end %>
     </div>
