お問い合わせページ作成

--- a/app/views/tasks/_footer.html.erb
+++ b/app/views/tasks/_footer.html.erb
@@ -4,6 +4,7 @@
       <ul>
         <li><%= link_to '利用規約', page_path('about') %></li>
         <li><%= link_to 'プライバシーポリシー', page_path('privacy') %></li>
+        <li><%= link_to 'お問い合わせ', page_path('qa') %></li>
         <li>Copyright @ 2023</li>
       </ul>
     </div>
