--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -27,7 +27,7 @@
         </div>
         <div class="field">
           <%= f.check_box :recurrence, { multiple: true } %>
-          <%= f.label :recurrence, "毎週繰り返す" %>
+          <%= f.label :recurrence, "来週も繰り返す" %>
         </div>
         <%= f.submit '登録', class: 'btn btn-primary'  %>
       <% end %>
